[package]
name = "audis"
version = "0.2.0"
authors = ["James Hunt <james@niftylogic.com>"]
edition = "2018"

description = "An audit logging system, built atop Redis."
license = "MIT"
homepage = "https://github.com/jhunt/audis-rs"
repository = "https://github.com/jhunt/audis-rs"

[dependencies.redis]
version = "0.13"

[dev-dependencies.rand]
version = "0.7"
