[package]
name = "audis"
version = "0.2.1"
authors = ["James Hunt <james@niftylogic.com>"]
description = "An audit logging system, built atop Redis."
homepage = "https://github.com/jhunt/audis-rs"
repository = "https://github.com/jhunt/audis-rs"
documentation = "https://docs.rs/audis"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
redis = "0.13"
rand = "0.7"
clap = { version = "*", optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "audis"
required-features = ["cli"]
